--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 beautifulsoup4==4.4.1
 cycler==0.10.0
+dj-database-url
 decorator==4.0.11
-dj-database-url==0.4.2
 Django==1.10.5
 django-cors-headers==2.0.2
 functools32==3.2.3.post2
@@ -11,10 +11,11 @@ jsonrpc==1.2
 matplotlib==2.0.0
 networkx==1.11
 nltk==3.2.1
+numpy==1.11.1
 pexpect==4.2.1
-psycopg2==2.7.1
 ptyprocess==0.5.1
 pydot==1.2.3
+psycopg2==2.7.1
 pygraphviz==1.3.1
 pyparsing==2.1.10
 python-dateutil==2.6.0
